--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Beatrice Francis Carey Homepage
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: Beatrice F. Carey Webpage
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-minimal
