--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Beatrice Francis Carey Homepage
-logo: /assets/img/logo.png
+logo: /assets/img/.png
 description: Beatrice F. Carey Webpage
 show_downloads: true
 google_analytics:
-theme: jekyll-theme-minimal
+theme: 
